<resources>
    <string name="app_name">TO-DO Manager</string>
    <string name="webClientId">589133629225-hu3l125ju3bjh1lolm9i98cgv2us6ofp.apps.googleusercontent.com</string>
    <string name="image_view">Image View</string>
    <string name="don_t_forget_something">Don\'t Forget Something</string>
    <string name="sign_out">Sign Out</string>
    <string name="notes">Notes</string>
    <string name="welcome_ahmed_badr">Hello, Ahmed badr</string>
    <string name="title">Title</string>
    <string name="_20_12_2022">20/12/2022</string>
    <string name="description">description</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="delete">Delete</string>
    <string name="fragment_sign_in">fragment_sign_in</string>
    <string name="fragment_splash_screen">fragment_splash_screen</string>
    <string name="fragment_note_list">fragment_note_list</string>
    <string name="fragment_note_view">fragment_note_view</string>
    <string name="fragment_note_edit">fragment_note_edit</string>
    <string name="add_note_to_show">Add Note To Show</string>
    <string name="add">Add</string>
    <string name="egypt_time_zone">GMT+02:00</string>
    <string name="note_success_update_message">Note Updated Successfully</string>
    <string name="note_fail_update_message">Fail To Update Note</string>
    <string name="something_wont_wrong">Something Wont Wrong</string>
    <string name="note_added_successfully">Note Added Successfully</string>
    <string name="title_cant_be_empty">Title Can\'t Be Empty</string>
    <string name="note_deleted_successfully">Note Deleted Successfully</string>
    <string name="created_in">Created in :</string>
    <string name="updated_in">Updated in :</string>
</resources>