<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.elements.fragments.NoteViewFragment">

    <Button
        android:id="@+id/buttonDelete"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/delete"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEdit"
        app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit"
        app:icon="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEdit" />

    <TextView
        android:id="@+id/textViewNoteDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20_12_2022"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDateLabel"
        app:layout_constraintEnd_toEndOf="@+id/textViewNoteTitle"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="@+id/textViewNoteTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewDateLabel" />

    <TextView
        android:id="@+id/textViewNoteDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="30dp"
        android:text="@string/description"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateLabel"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/buttonBackToNoteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/image_view"
        android:elevation="10dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewNoteTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewNoteDate"
        app:layout_constraintStart_toEndOf="@+id/textViewNoteDate" />

    <ProgressBar
        android:id="@+id/progressBarNoteDeletion"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/created_in"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@+id/textViewNoteTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoteTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>