<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.elements.fragments.NoteListFragment">

    <TextView
        android:id="@+id/textViewAuthenticatedUserName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:text=""
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonSignOut"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSignOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonSignOut" />

    <ImageButton
        android:id="@+id/imageButtonSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/image_view"
        android:elevation="10dp"
        android:padding="12dp"
        android:src="@drawable/ic_baseline_power_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/notes"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewAuthenticatedUserName"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthenticatedUserName" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:listitem="@layout/item_note" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addingNoteFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:contentDescription="@string/image_view"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewNotingToShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note_to_show"
        android:textSize="@dimen/_20sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/notesRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/notesRecyclerView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/notesRecyclerView"
        app:layout_constraintTop_toTopOf="@+id/notesRecyclerView"
        app:layout_constraintVertical_bias="0.464" />

    <ProgressBar
        android:id="@+id/progressBarNotesLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/notesRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/notesRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notesRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>